feat: #12 Delete Profile (service)
